# msvc_abi_compat

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  bitprimbuildinfo.cmake  build.py  conanfile.py  test-abiConfig.cmake.in
include/msvc_abi_compat/: test.hpp
src/: test.cpp
